name:			jugs
version:		0.1
license:		OtherLicense
license-file:		LICENSE
author:			Edward Kmett
maintainer:		ekmett@gmail.com
stability:		alpha
homepage:		http://slipwave.info/
synopsis:		ECMAScript 4 Language Tools for Haskell
copyright:		Copyright (C) 2006 Edward Kmett. All Rights Reserved
description: 		Exposes a ECMAScript 4 implementation to Haskell.
build-depends:		plugins>=1.0
extensions:		MultiParamTypeClasses, FunctionalDependencies, Arrows, TemplateHaskell, CPP
exposed-modules:	
	Data.Hashable,
	Data.THash,
	Data.THash.THT,
	Type.Boolean, 
	Type.Ord, 
	Type.Binary, 
	Type.Binary.Internals, 
	Type.Binary.TH,
	Type.Binary.Hex,
	Type.Binary.Names,
	Type.Hex,
	Type.Hex.Stage1,
	Type.Hex.Stage2,
	Type.Hex.Stage3,
	Type.Maybe
ghc-options:		-Wall -O -funbox-strict-fields
hs-source-dirs:		src
